--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Greetings!</h1>
+    <h1>Greetings! {{name}}</h1>
     <dl>
       <dt>this is some item list</dt>
       <dt>this is some item list</dt>
